<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">极光IM</string>
    <string name="username_hit">用户名</string>
    <string name="password_hit">用户密码</string>
    <!-- ReLogin/login/register界面中使用到的字符串 -->
    <string name="change_user_btn">切换账号</string>
    <string name="register">注册</string>
    <string name="registering_hint">注册中</string>
    <string name="register_failed_toast">注册失败</string>
    <string name="login">登录</string>
    <string name="login_hint">登录中</string>
    <string name="user_not_exist_toast">该用户不存在</string>
    <string name="user_already_exist_toast">该用户已存在</string>
    <string name="user_add_self_toast">不能添加自己为好友</string>
    <string name="register_username_hit">用户名(数字、字母、_ 组成)</string>
    <string name="username_not_null_toast">用户名不能为空</string>
    <string name="nickname_not_null_toast">昵称不能为空</string>
    <string name="password_not_null_toast">密码不能为空</string>
    <string name="password_length_illegal">密码长度要在4-128个字节之间</string>
    <string name="password_same_to_previous">不能和原密码相同，请输入新密码</string>

    <!-- fixProfile界面中使用到的字符串 -->
    <string name="nickname_hit">昵称</string>
    <string name="take_new_photo">拍摄照片</string>
    <string name="pick_picture_from_local">选择图片</string>
    <string name="get_photo">　使用照片</string>
    <string name="updating_avatar_hint">正在上传头像</string>
    <string name="avatar_modify_succeed_toast">头像修改成功</string>
    <string name="later_setting">稍后设置</string>
    <string name="saving_hint">正在保存</string>
    <string name="nickname_save_failed">昵称保存失败</string>

    <!--聊天相关-->
    <string name="actionbar_msg">聊天</string>
    <string name="actionbar_conversation">会话</string>
    <string name="actionbar_contact">通讯录</string>
    <string name="actionbar_me">我</string>
    <string name="search_friend_hit">邮箱/用户名/ID</string>
    <string name="take_monent">稍等片刻</string>
    <string name="add_friend">添加朋友</string>
    <string name="fetch_user_info_failed">用户信息获取失败</string>
    <string name="create_group">创建群聊</string>
    <string name="creating_hint">创建中</string>
    <string name="create_user">我们正在建立您的个人档案</string>
    <string name="search_friend_title_bar">搜索结果</string>
    <string name="friend_request_hit">请你输入你的添加好友请求</string>
    <string name="friend_request_input_hit">我是…</string>
    <string name="send_request">发送请求</string>
    <string name="copy">复制</string>
    <string name="forward_msg">转发</string>
    <string name="copy_toast">已复制</string>
    <string name="delete">删除</string>
    <string name="create_file_failed">创建文件失败</string>
    <string name="record_voice_hint">按住 说话</string>
    <string name="cancel_record_voice_hint">松开手指，取消发送</string>
    <string name="send_voice_hint">松开 结束</string>
    <string name="move_to_cancel_hint">手指上滑，取消发送</string>
    <string name="rest_record_time_hint">还可以说%s秒</string>
    <string name="file_not_found_toast">文件丢失</string>
    <string name="not_select_photo">你没有选择照片，请重新选择</string>
    <string name="picture_not_found">没有找到您想要的图片</string>
    <string name="loading">正在加载</string>
    <string name="load_failed_toast">加载失败</string>
    <string name="info_null">未填写</string>
    <string name="change_avatar">修改头像</string>
    <string name="operation">操作</string>
    <string name="origin_picture">原图</string>
    <string name="choose">选择</string>
    <string name="send">发送</string>
    <string name="send_message">发消息</string>
    <string name="sending_hint">正在发送</string>
    <string name="resend_message_hint">重发该消息？</string>
    <string name="resend_commit">重发</string>
    <string name="cancel">取消</string>
    <string name="picture_num_limit_toast">你最多只能同时发送9张图片</string>
    <string name="load_origin_image">显示大图</string>
    <string name="downloading_hint">正在下载</string>
    <string name="download_completed_toast">下载完成</string>
    <string name="choose_album_title">选择相册</string>
    <string name="friend_opt_change_name">修改备注</string>
    <string name="friend_opt_delete">删除好友</string>
    <string name="friend_opt_detail">详细资料</string>
    <string name="detail_info">个人资料</string>
    <string name="voice_length">10"</string>
    <string name="time_too_short_toast">时间太短！</string>
    <string name="file_fetch_failed">文件获取失败</string>
    <string name="record_voice_permission_toast">若要使用语音功能，请选择允许录音</string>
    <string name="voice_fetch_failed_toast">获取语音失败，请重试</string>
    <string name="picture">[图片]</string>
    <string name="voice">[语音]</string>
    <string name="location">[位置]</string>
    <string name="group_notification">[群成员变动]</string>
    <string name="yesterday">昨天</string>
    <string name="before_dawn">凌晨</string>
    <string name="morning">早上</string>
    <string name="afternoon">下午</string>
    <string name="night">晚上</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="second">秒</string>
    <string name="local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
    <string name="sdcard_not_exist_toast">暂无外部存储</string>
    <string name="camera_not_prepared">摄像头尚未准备好</string>
    <string name="sdcard_not_prepare_toast">sdcard尚未准备好</string>

    <!--notification-->
    <string name="noti_new_message_receive">收到新消息</string>
    <string name="noti_content_type_img">[图片]</string>
    <string name="noti_content_type_voice">[语音]</string>
    <string name="noti_content_type_location">[位置]</string>

    <!--设置相关-->
    <string name="birthday">出生日期</string>
    <string name="sex">性别</string>
    <string name="area">地区</string>
    <string name="sign">个性签名</string>
    <string name="commit">确认</string>
    <string name="finish">完成</string>
    <string name="upload_avatar_title">请选择上传头像方式</string>
    <string name="setting">系统设置</string>
    <string name="login_out">退出登录</string>
    <string name="add_to_friend">加为好友</string>
    <string name="setting_username_hit">昵称</string>
    <string name="setting_username_big_hit">更改名字</string>
    <string name="note_name">备注名</string>
    <string name="setting_location_hit">地区</string>
    <string name="input_location_title">输入地区</string>
    <string name="input_area_error">请输入您所在的地区</string>
    <string name="setting_location_big_hit">修改地区</string>
    <string name="setting_signature_hit">个信签名</string>
    <string name="input_signature_toast">请输入您的个性签名</string>
    <string name="edit_signature_title">编辑个性签名</string>
    <string name="save">保存</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="unknown">未知</string>
    <string name="change_password">修改密码</string>
    <string name="change_pwd_tip">修改密码前请输入原密码</string>
    <string name="input_password_error_toast">输入密码错误，请重新输入</string>
    <string name="change_password_title">设置密码</string>
    <string name="change_old_password_hit">原密码</string>
    <string name="new_password">新密码</string>
    <string name="hint_reset_password">请设置登录密码</string>
    <string name="hint_confirm_password">请再次输入</string>
    <string name="confirm_password">确认密码</string>
    <string name="change_password_hit">填写密码</string>
    <string name="change_password_re_hit">再次填写密码</string>
    <string name="password_not_match_toast">两次输入的密码不一致</string>
    <string name="password_change_success_toast">修改成功，请牢记新密码</string>
    <string name="new_msg_remind_hit">新消息提醒</string>
    <string name="receive_new_msg_notification_hit">接收新消息通知</string>
    <string name="receive_new_msg_vibration_hit">震动</string>
    <string name="receive_new_msg_voice_hit">声音</string>
    <string name="background_msg_remind_time">后台消息免打扰时段</string>
    <string name="dnd_sub_hit">勿扰模式</string>
    <string name="all_day_remind_hit">全天提醒</string>
    <string name="close_all_day_remind">关闭全天提醒后，消息只在设定时间内提醒</string>
    <string name="disturb_description">开启后，在设定时间段内收到新消息将不会响铃或震动</string>
    <string name="begin_time">开始时间</string>
    <string name="end_time">结束时间</string>

    <!--聊天详情-->
    <string name="friend_request_title">新朋友</string>
    <string name="friend_info">好友信息</string>
    <string name="group">群聊</string>
    <string name="added">已添加</string>
    <string name="chat_peoples_num">目前已有1名参与人</string>
    <string name="chat_detail_del">删除</string>
    <string name="chat_detail_add">添加</string>
    <string name="chat_detail_title">聊天详情</string>
    <string name="group_name_hit">群聊名称</string>
    <string name="group_name_not_null_toast">名称不能为空</string>
    <string name="modify_success_toast">修改成功</string>
    <string name="add_friend_to_group_title">添加好友到群组</string>
    <string name="searching_user">正在查找</string>
    <string name="adding_hint">正在添加</string>
    <string name="modifying_hint">正在修改</string>
    <string name="adding_group_member_hint">正在增加群成员</string>
    <string name="deleting_group_member_hint">正在删除群成员</string>
    <string name="join_group_toast">加入了群聊</string>
    <string name="exiting_group_toast">正在退出</string>
    <string name="deleted_by_creator">你被请出了群聊</string>
    <string name="delete_group_by_creator">群主解散了此群</string>
    <string name="exit_group_by_creator">被请出了群聊</string>
    <string name="exit_group_event">退出了群聊</string>
    <string name="group_people_num_hit">群人数上限</string>
    <string name="group_my_name_hit">我在本群昵称</string>
    <string name="change_nickname_hint">修改此昵称只会在本群中显示</string>
    <string name="group_chat_history_hit">查找聊天内容</string>
    <string name="group_clear_history_hit">清空聊天记录</string>
    <string name="clear_history_confirm_title">确定清空聊天记录？</string>
    <string name="deleting_hint">删除中</string>
    <string name="group_exit_btn">删除并退出</string>


    <string name="server_abnormal_toast">服务器返回异常，请重试</string>
    <string name="connect_failed_toast">连接服务器失败，请稍后重试</string>
    <string name="server_return_error_toast">服务器返回格式错误</string>
    <string name="unknown_error_toast">未知错误</string>
    <string name="system_error_toast">系统内部错误，请稍候重试</string>
    <string name="parameter_illegal">参数值不合法</string>

    <!--以下为错误码提示-->
    <string name="server_800002">AppKey信息为空</string>
    <string name="server_800003">AppKey未注册</string>
    <string name="server_800004">用户ID为空</string>
    <string name="server_800005">用户ID未注册(AppKey无该UID)</string>
    <string name="server_800006">用户ID不存在(数据库中无该UID)</string>
    <string name="server_800012">请重新登录</string>
    <string name="server_800013">您的账号已登出，请重新登录</string>
    <string name="server_801003">用户名不存在</string>
    <string name="server_802001">用户名为空</string>
    <string name="server_801004">密码错误</string>
    <string name="server_803001">发送消息失败，状态存储异常</string>
    <string name="server_803002">发送消息失败，系统网络异常</string>
    <string name="server_803004">发送失败，此群已被删除</string>
    <string name="server_803005">您已被请出此群，不能发送消息</string>
    <string name="server_808004">群组名长度超出上限</string>
    <string name="server_810003">用户不属于该群组</string>
    <string name="server_810005">要添加的用户尚未注册</string>
    <string name="sdk_http_899001">用户已存在</string>
    <string name="sdk_http_899006">该群已被删除</string>
    <string name="sdk_http_898005">uid不存在</string>
    <string name="sdk_http_898006">此群已被删除</string>
    <string name="sdk_http_898008">校验失败</string>
    <string name="sdk_http_898009">APPKey不存在</string>
    <string name="sdk_http_898010">请求失败，请稍候重试</string>
    <string name="sdk_http_898030">系统繁忙，稍后重试</string>
    <string name="sdk_87x_871104">服务器返回错误</string>
    <string name="sdk_87x_871303">用户名需以数字或字母开头，长度在4-128个字节之间，且不能带_ @ -以外的字符</string>
    <string name="sdk_87x_871304">密码长度要在4-128个字节之间</string>
    <string name="sdk_87x_871305">名称长度须小于64个字节</string>
    <string name="sdk_87x_871309">消息所含文件不存在</string>
    <string name="sdk_87x_871403">发送失败，请稍后重试</string>
    <string name="sdk_87x_871404">下载失败，请稍后重试</string>
    <string name="sdk_87x_871201">请求超时，请检查您的网络</string>
</resources>

