<?xml version="1.0" encoding="utf-8"?>
<cn.jpush.im.android.demo.view.MainView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >
    

    <LinearLayout
        android:id="@+id/actionbar_layout_tmp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/actionbar_msg_btn"
            style="@style/ActionBarItem"
            android:drawableTop="@drawable/actionbar_msg_drawable_bg"
            android:text="@string/actionbar_msg" />

        <Button
            android:id="@+id/actionbar_contact_btn"
            style="@style/ActionBarItem"
            android:drawableTop="@drawable/actionbar_contact_drawable_bg"
            android:text="@string/actionbar_contact" />

        <Button
            android:id="@+id/actionbar_me_btn"
            style="@style/ActionBarItem"
            android:drawableTop="@drawable/actionbar_me_drawable_bg"
            android:text="@string/actionbar_me" />
    </LinearLayout>

    <cn.jpush.im.android.demo.view.ScrollControllViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/actionbar_layout_tmp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

    </cn.jpush.im.android.demo.view.ScrollControllViewPager>

</cn.jpush.im.android.demo.view.MainView>