<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@drawable/dialog_default_style"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="hello"
        android:textColor="#3F81DF"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#818181" />

    <LinearLayout
        android:id="@+id/copy_msg_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_bg">

        <TextView
            android:id="@+id/copy_msg_tv"
            style="@style/dialog_msg_alert_txt_style"
            android:text="@string/copy"/>

    </LinearLayout>

    <View
        android:id="@+id/forward_split_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cbc9ca" />

    <LinearLayout
        android:id="@+id/forward_msg_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_bg">

        <TextView
            android:id="@+id/forward_msg_tv"
            android:text="@string/forward_msg"
            style="@style/dialog_msg_alert_txt_style" />

    </LinearLayout>

    <View
        android:id="@+id/delete_split_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cbc9ca" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/delete_msg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_bottom_btn_bg"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/delete"
            android:textColor="#4E4E4E"
            android:textSize="@dimen/text_medium_size" />

    </LinearLayout>

</LinearLayout>