<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.jpush.im.android.demo.activity.DisturbSettingActivity"
    android:background="#F1EFF5"
    android:orientation="vertical">

    <include layout="@layout/menu_title_bar"/>

    <RelativeLayout
        style="@style/SettingItem"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/disturb_mode_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="勿扰模式"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <cn.jpush.im.android.demo.view.SlipButton
            android:id="@+id/disturb_mode_switch"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/disturb_mode_tv"
            android:paddingTop="10dp"
            android:text="@string/disturb_description"/>

        </RelativeLayout>

    <LinearLayout
        android:id="@+id/time_setting_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/me_split_line_color" />

    <RelativeLayout
        android:id="@+id/begin_time_ll"
        style="@style/SettingItem"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/begin_time"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/begin_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:text="晚上 23:00"
            android:textSize="20sp"
            android:textColor="#A2A0A1"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/me_split_line_color" />

    <RelativeLayout
        android:id="@+id/end_time_ll"
        style="@style/SettingItem"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/end_time"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:text="早上 11:00"
            android:textSize="20sp"
            android:textColor="#A2A0A1"/>

    </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/me_split_line_color" />

    </LinearLayout>


</LinearLayout>
